resume une page

--- a/cv-sections/experience-onepage.tex
+++ b/cv-sections/experience-onepage.tex
@@ -14,16 +14,33 @@
 
 \cventry
 {Cofondateur \& Lead Developer} % Job title
-{\href{https://www.wisetwin.eu}{Wise-Twin} \& \href{https://www.bootstrap-now.com}{Bootstrap-Now}} % Organization avec lien
+{\href{https://www.wisetwin.eu}{Wise-Twin {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône
 {Toulouse, France} % Location
 {Mars 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Développement full-stack de plateformes SaaS: formation 3D immersive (Wise-Twin) et accompagnement entrepreneurial (Bootstrap-Now)}
-\item {Conception et implémentation d'architectures robustes intégrant Unity dans un environnement web React}
-\item {Technologies: React/Next.js, Node.js, Python, Unity, PostgreSQL, Prisma, OpenAI API, Azure, Vercel}
+\item {Direction du développement technique d'une plateforme SaaS de formation 3D immersive pour techniciens industriels}
+\item {Conception d'architectures intégrant Unity dans un environnement web React avec base de données optimisée}
+\item {Technologies: React/Next.js, Node.js, Python, Unity, PostgreSQL, Azure}
 \end{cvitems}
 }
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Cofondateur \& Lead Developer} % Job title
+{\href{https://www.bootstrap-now.com}{Bootstrap-Now {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône
+{Toulouse, France} % Location
+{Mars 2024 - Présent} % Date(s)
+{ % Description(s) of tasks/responsibilities
+\begin{cvitems}
+\item {Développement d'une plateforme SaaS d'accompagnement entrepreneurial avec recherche d'opportunités business}
+\item {Création d'outils d'analyse de marché et de génération de business plans assistés par IA}
+\item {Technologies: React/Next.js, Node.js, PostgreSQL, Prisma, OpenAI API, Vercel}
+\end{cvitems}
+}
+\vspace{1.5em}
 
 %------------------------------------------------
 
@@ -34,11 +51,12 @@
 {Mars 2022 - Février 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Réalisation de projets data end-to-end: prévention d'accidents via IoT et LLM, extraction SAP, contrôle de factures par computer vision}
-\item {Implémentation d'architectures cloud et on-premise avec monitoring automatisé et alertes}
-\item {Technologies: Python, React, Azure, Computer Vision, NLP, SQL, SAP, IoT, LLM, CI/CD}
+\item {Projets data end-to-end: prévention d'accidents (IoT, LLM), extraction SAP, contrôle de factures par computer vision}
+\item {Architectures cloud incluant datawarehouse, détection d'anomalies et monitoring automatisé}
+\item {Technologies: Python, React, Azure, Computer Vision, NLP, SQL, SAP, IoT}
 \end{cvitems}
 }
+\vspace{1.5em}
 
 %------------------------------------------------
 
@@ -49,11 +67,12 @@
 {Juillet 2020 - Mars 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Conception d'un Chat Bot intelligent avec indexation avancée de documentation technique et recherche sémantique}
-\item {Développement de solutions d'analyse comportementale et de migration de données cross-plateforme}
+\item {Conception d'un Chat Bot intelligent avec indexation avancée de documentation et recherche sémantique}
+\item {Optimisation d'interfaces et création d'une solution de migration de données cross-plateforme}
 \item {Technologies: Python, AWS, NLP, SQL, Elasticsearch, API REST}
 \end{cvitems}
 }
+\vspace{1.5em}
 
 %------------------------------------------------
 
