--- a/resume_cv_onepage.tex
+++ b/resume_cv_onepage.tex
@@ -1,15 +1,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Awesome Resume/CV - One Page Version
+% Awesome Resume/CV
 % XeLaTeX Template
+% Version 1.3 (30/3/2020)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[11pt, a4paper]{awesome-cv}
 
-\geometry{left=1.8cm, top=1.5cm, right=1.8cm, bottom=1.8cm, footskip=.5cm} % Marges réduites
+\geometry{left=2cm, top=1.5cm, right=2cm, bottom=2cm, footskip=.5cm}
 
 \fontdir[fonts/]
 
 % Color for highlights
+% \colorlet{awesome}{awesome-skyblue}
 \definecolor{myblue}{HTML}{0066CC} % Un bleu plus foncé et lisible
 \colorlet{awesome}{myblue}
 
@@ -20,24 +22,41 @@
 %----------------------------------------------------------------------------------------
 
 \name{Manoel}{Da Ponte}
-\address{Toulouse, France}
+\address{390 route de Saint Simon, Toulouse, France}
 \mobile{(+33) 6 82 69 71 32}
+
 \email{daponte.manoel@gmail.com}
 \homepage{manoel-daponte.com}
 \linkedin{manoel-da-ponte-4092ab139}
-\extrainfo{Permis B + véhicule}
-\position{Senior Full Stack Engineer}
-\quote{Spécialisé dans l'ingénierie de données et le développement full-stack, je conçois des solutions analytiques innovantes et centrées utilisateur.}
 
-\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{1/1}
+\position{Full Stack Engineer}
+\quote{Ingénieur full-stack et data scientist combinant expertise technique et vision business. Conception d'applications end-to-end avec une approche orientée résultats pour des solutions analytiques innovantes et centrées utilisateur.}
+
+\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage}
+
+%----------------------------------------------------------------------------------------
 
 \begin{document}
 
 \makecvheader
 
+%----------------------------------------------------------------------------------------
+%	NOTE DE RÉFÉRENCE AU SITE WEB - DISCRÈTE
+%----------------------------------------------------------------------------------------
+
+\begin{flushright}
+{\small\color{graytext}Plus d'informations sur \href{https://manoel-daponte.com}{manoel-daponte.com}}
+\end{flushright}
+
+\vspace{0.1cm}
+
+%----------------------------------------------------------------------------------------
+%	CV/RESUME CONTENT
+%	Each section is imported separately, open each file in turn to modify content
+%----------------------------------------------------------------------------------------
+
 % Version condensée pour tenir sur une page
-\input{cv-sections/profile-onepage.tex}
-\input{cv-sections/skills-onepage.tex}
+\input{cv-sections/skills.tex}
 \input{cv-sections/experience-onepage.tex}
 \input{cv-sections/education-onepage.tex}
 
