--- a/resume_cv_onepage.tex
+++ b/resume_cv_onepage.tex
@@ -45,7 +45,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{flushright}
-{\small\color{graytext}Plus d'informations sur \href{https://manoel-daponte.com}{manoel-daponte.com}}
+{\websitelinkstyle{Pour plus d'informations et exemples de projets, visitez \href{https://manoel-daponte.com}{manoel-daponte.com} \faExternalLink}}
 \end{flushright}
 
 \vspace{0.1cm}
@@ -59,5 +59,6 @@
 \input{cv-sections/skills.tex}
 \input{cv-sections/experience-onepage.tex}
 \input{cv-sections/education-onepage.tex}
+
 
 \end{document}
