--- a/cv-sections/education-onepage.tex
+++ b/cv-sections/education-onepage.tex
@@ -13,11 +13,11 @@
 %------------------------------------------------
 
 \cventry
-{Diplômé} % Status
-{Master Science et Ingénierie des Données} % Degree
+{Diplômée} % Status
+{Master Data Science et Ingénierie des Données} % Degree
 {Université Paul Sabatier Toulouse III} % Institution
 {2019 - 2021} % Date(s)
-{Formation approfondie en data engineering couvrant la collecte, le stockage et l'analyse statistique des données massives.} % Description
+{Formation approfondie en data science couvrant l'analyse exploratoire et prédictive, la modélisation statistique avancée et le traitement de données massives (Big Data).} % Description
 
 %------------------------------------------------
 
