--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -13,30 +13,30 @@
 %------------------------------------------------
 
 \cventry
-{Diplômé} % Status
-{Master Science et Ingénierie des Données} % Degree
+{Diplômée} % Status
+{Master Data Science et Ingénierie des Données} % Degree
 {Université Paul Sabatier Toulouse III} % Institution
 {2019 - 2021} % Date(s)
-{Formation approfondie en data engineering couvrant la collecte, le stockage et l'analyse statistique des données massives.} % Description
+{Formation approfondie en data science couvrant l'analyse exploratoire et prédictive, la modélisation statistique avancée et le traitement de données massives (Big Data).} % Description
 
 
 %------------------------------------------------
 
 \cventry
-{Diplômé} % Status
-{Licence MIASHS parcours Mathématiques} % Degree
-{Université Jean Jaurès Toulouse II} % Institution
+{Diplômée} % Status
+{Licence 3 Data Science et Ingénierie des Données} % Degree
+{Université Paul Sabatier Toulouse III} % Institution
 {2018 - 2019} % Date(s)
-{Formation pluridisciplinaire associant mathématiques appliquées, informatique et sciences humaines et sociales.} % Description
+{Initiation à la data science associant mathématiques appliquées, statistiques descriptives, programmation et analyse de données.} % Description
 
 %------------------------------------------------
 
 \cventry
-{Diplômé} % Status
-{DUT Statistique et Informatique Décisionnelle} % Degree
-{Université de Caen} % Institution
-{2016 - 2018} % Date(s)
-{Formation en statistique et informatique pour l'analyse et la modélisation des données d'aide à la décision.} % Description
+{Diplômée} % Status
+{Licence Mathématiques} % Degree
+{Université USTHB - Algérie} % Institution
+{2015 - 2018} % Date(s)
+{Formation en mathématiques fondamentales couvrant l'algèbre, l'analyse, les probabilités et statistiques, développant une rigueur analytique et des compétences en résolution de problèmes complexes.} % Description
 
 
 %------------------------------------------------
