--- a/cv-sections/experience-onepage.tex
+++ b/cv-sections/experience-onepage.tex
@@ -13,31 +13,15 @@
 %------------------------------------------------
 
 \cventry
-{Cofondateur \& Lead Developer} % Job title
-{\href{https://www.wisetwin.eu}{Wise-Twin {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône
+{Fondateur \& Full-Stack Developer} % Job title
+{Entrepreneur Indépendant} % Organization
 {Toulouse, France} % Location
-{Mars 2024 - Présent} % Date(s)
+{Septembre 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Direction du développement technique d'une plateforme SaaS de formation 3D immersive pour techniciens industriels}
-\item {Conception d'architectures intégrant Unity dans un environnement web React avec base de données optimisée}
-\item {Technologies: React/Next.js, Node.js, Python, Unity, PostgreSQL, Azure}
-\end{cvitems}
-}
-\vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Cofondateur \& Lead Developer} % Job title
-{\href{https://www.bootstrap-now.com}{Bootstrap-Now {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône
-{Toulouse, France} % Location
-{Mars 2024 - Présent} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Développement d'une plateforme SaaS d'accompagnement entrepreneurial avec recherche d'opportunités business}
-\item {Création d'outils d'analyse de marché et de génération de business plans assistés par IA}
-\item {Technologies: React/Next.js, Node.js, PostgreSQL, Prisma, OpenAI API, Vercel}
+\item {Création de Pick\&Eat : application mobile de scan de menus avec OCR multilingue et détection d'allergènes (100+ langues)}
+\item {Création de CashSense : plateforme SaaS de gestion financière avec prédiction budgétaire et catégorisation automatique par IA}
+\item {Technologies: LLM, OCR, NLP, Machine Learning, Python, React, React Native, PostgreSQL}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -46,14 +30,14 @@
 
 \cventry
 {Data Engineer} % Job title
-{TotalEnergies} % Organization
-{Esbjerg, Danemark} % Location
-{Mars 2022 - Février 2024} % Date(s)
+{Orange Business} % Organization
+{Toulouse, France} % Location
+{Mai 2022 - Septembre 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Projets data end-to-end: prévention d'accidents (IoT, LLM), extraction SAP, contrôle de factures par computer vision}
-\item {Architectures cloud incluant datawarehouse, détection d'anomalies et monitoring automatisé}
-\item {Technologies: Python, React, Azure, Computer Vision, NLP, SQL, SAP, IoT}
+\item {Développement d'un chatbot IA pour l'audit de code source et création de data lakes RH multi-sources}
+\item {Pipelines d'alimentation automatisés pour dashboards analytiques avec rafraîchissement quotidien}
+\item {Technologies: Spark, Hadoop, PySpark, Scala, SQL, GCP, DBT, Python, LLM}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -61,15 +45,15 @@
 %------------------------------------------------
 
 \cventry
-{Data Scientist} % Job title
-{CGI} % Organization
+{Data Analyst} % Job title
+{Alliance4U} % Organization
 {Toulouse, France} % Location
-{Juillet 2020 - Mars 2022} % Date(s)
+{Septembre 2020 - Avril 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Conception d'un Chat Bot intelligent avec indexation avancée de documentation et recherche sémantique}
-\item {Optimisation d'interfaces et création d'une solution de migration de données cross-plateforme}
-\item {Technologies: Python, AWS, NLP, SQL, Elasticsearch, API REST}
+\item {Dashboards décisionnels pour CEO : suivi CA, facturation, activités. Projets ETL Python/Talend vers Power BI}
+\item {Modèles de machine learning pour matching compétences consultants avec missions potentielles}
+\item {Technologies: Python, Talend, SQL, Power BI, Qlik Sense, Machine Learning, API REST}
 \end{cvitems}
 }
 \vspace{1.5em}
