--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -13,59 +13,37 @@
 %------------------------------------------------
 
 \cventry
-{Cofondateur \& Lead Developer} % Job title
-{\href{https://www.wisetwin.eu}{Wise-Twin {\tiny\textcolor{black}{\faExternalLink}}}} % Organization avec lien et icône noire plus petite
+{Fondateur \& Full-Stack Developer} % Job title
+{Entrepreneur Indépendant} % Organization
 {Toulouse, France} % Location
-{Mars 2024 - Présent} % Date(s)
+{Septembre 2024 - Présent} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Direction complète du développement technique d'une plateforme SaaS de formation 3D immersive pour techniciens industriels}
-\item {Conception et implémentation d'une architecture intégrant des builds Unity dans un environnement web React}
-\item {Développement d'environnements 3D pour former des techniciens sur des installations sensibles comme des centrales électriques}
-\item {Création d'une infrastructure de base de données optimisée pour l'analyse en temps réel des performances des utilisateurs}
-\item {Mise en place d'un pipeline CI/CD pour automatiser les déploiements et maintenir une qualité de code élevée}
-\item {Technologies: React/Next.js, Python, Node.js, Unity, Azure, Ubuntu Server, PostgreSQL, ThingsBoard, Node.js}
+\item {Création et développement de Pick\&Eat : application mobile de scan de menus avec détection d'allergènes, OCR multilingue et traduction automatique (100+ langues)}
+\item {Création et développement de CashSense : plateforme SaaS de gestion financière avec prédiction de dépassements budgétaires et catégorisation automatique par IA}
+\item {Développement full-stack end-to-end : de la conception UX/UI à la mise en production sur infrastructure cloud}
+\item {Intégration de solutions d'intelligence artificielle avancées : LLM, OCR, NLP et machine learning pour l'analyse prédictive}
+\item {Technologies: LLM, OCR, NLP, Machine Learning, Python, React, React Native, PostgreSQL}
 \end{cvitems}
 }
 
-\vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Cofondateur \& Lead Developer} % Job title
-{\href{https://www.bootstrap-now.com}{Bootstrap-Now {\tiny\textcolor{black}{\faExternalLink}}}}
-{Toulouse, France} % Location
-{Mars 2024 - Présent} % Date(s)
-{ % Description(s) of tasks/responsibilities
-\begin{cvitems}
-\item {Conception et développement d'une plateforme SaaS facilitant l'accès des auto-entrepreneurs au marché}
-\item {Création d'un outil propriétaire de recherche d'opportunités business utilisant des algorithmes d'agrégation de données multicanaux}
-\item {Développement d'un générateur de business plans collaboratif associant intelligence artificielle et expertise humaine}
-\item {Conception d'une solution d'analyse de marché semi-automatisée guidant les utilisateurs dans leur étude de viabilité}
-\item {Établissement de partenariats stratégiques avec des incubateurs pour renforcer l'écosystème entrepreneurial}
-\item {Technologies: React/Next.js, Node.js, PostgreSQL, Prisma, OpenAI API, Vercel}
-\end{cvitems}
-}
 \vspace{1.5em}
 
 %------------------------------------------------
 
 \cventry
 {Data Engineer} % Job title
-{TotalEnergies} % Organization
-{Esbjerg, Danemark} % Location
-{Mars 2022 - Février 2024} % Date(s)
+{Orange Business} % Organization
+{Toulouse, France} % Location
+{Mai 2022 - Septembre 2024} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Réalisation de projets end-to-end en équipe restreinte (1-3 personnes) couvrant systématiquement les aspects data management, front-end et back-end}
-\item {Développement d'une solution de prévention d'accidents par extraction de données IoT, analyse de rapports textuels et création d'un data warehouse centralisé avec fine-tuning de modèles LLM}
-\item {Conception de micro-logiciels d'extraction massive de données SAP optimisant les processus d'accès à l'information pour les utilisateurs métier}
-\item {Implémentation d'un système de contrôle de factures utilisant la computer vision pour l'extraction de données et l'analyse prédictive pour l'optimisation des achats}
-\item {Création d'une architecture IoT offshore comprenant datawarehouse, détection d'anomalies, monitoring par Prefect et alertes SMTP}
-\item {Développement d'une application de mobilité interne intégrant des technologies IA avancées pour faciliter la recherche d'opportunités professionnelles à l'échelle du groupe}
-\item {Support technique pour le déploiement d'applications et scripts business sur Azure et On-Premise, avec automatisation via pipelines CI/CD}
-\item {Technologies: Python, React, Azure, Computer Vision, NLP, SQL, SAP, IoT, Prefect, SMTP, LLM}
+\item {Développement d'un chatbot IA pour l'audit automatisé de code source}
+\item {Conception et développement de data lakes structurés pour centraliser les données RH multi-sources}
+\item {Modélisation de structures de données basées sur les cas d'usage métier pour faciliter le développement de dashboards analytiques}
+\item {Mise en place de pipelines d'alimentation automatisés assurant le rafraîchissement quotidien des données}
+\item {Collaboration avec les équipes RH pour identifier, analyser et concrétiser leurs besoins métier}
+\item {Technologies: Spark, Hadoop, PySpark, Scala, SQL, GCP, DBT, Python, LLM}
 \end{cvitems}
 }
 \vspace{1.5em}
@@ -73,18 +51,17 @@
 %------------------------------------------------
 
 \cventry
-{Data Scientist} % Job title
-{CGI} % Organization
+{Data Analyst} % Job title
+{Alliance4U} % Organization
 {Toulouse, France} % Location
-{Juillet 2020 - Mars 2022} % Date(s)
+{Septembre 2020 - Avril 2022} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
-\item {Conception et développement d'un Chat Bot intelligent basé sur l'indexation avancée de documentation technique pour faciliter l'accès à l'information}
-\item {Mise en place d'une architecture d'indexation et de recherche sémantique permettant une compréhension contextuelle des requêtes utilisateurs}
-\item {Optimisation de parcours utilisateurs dans des interfaces complexes grâce à l'analyse comportementale et l'implémentation de recommandations personnalisées}
-\item {Création d'une solution robuste de migration de données sur AWS permettant l'interopérabilité entre systèmes hétérogènes}
-\item {Développement d'algorithmes d'analyse pour extraire des insights actionnables à partir des données d'activité web et améliorer l'expérience utilisateur}
-\item {Technologies: Python, AWS, NLP, SQL, Elasticsearch, API REST}
+\item {Construction de dashboards décisionnels pour le CEO et les directeurs commerciaux (suivi CA, facturation, activités consultants)}
+\item {Réalisation de projets end-to-end : extraction de données via API Python, transformation ETL (Talend), création de data marts et développement de dashboards (Power BI, Qlik Sense)}
+\item {Développement de modèles de machine learning pour le matching automatique des compétences consultants avec les missions potentielles}
+\item {Collaboration directe avec le CEO et les directeurs commerciaux des différentes agences pour identifier et répondre aux besoins analytiques}
+\item {Technologies: Python, Talend, SQL, Power BI, Qlik Sense, Machine Learning, API REST}
 \end{cvitems}
 }
 \vspace{1.5em}
