--- a/cv-sections/projects.tex
+++ b/cv-sections/projects.tex
@@ -13,72 +13,50 @@
 %------------------------------------------------
 
 \cventry
-{Développeur Open Source} % Role
-{Outil de Transcription Audio} % Project
-{Esbjerg, Danemark} % Location
+{Fondatrice} % Role
+{Pick\&Eat - Application mobile de scan de menus} % Project
+{Toulouse, France} % Location
+{2025} % Date(s)
+{ % Description(s)
+\begin{cvitems}
+\item {Application mobile permettant de scanner les menus de restaurants pour identifier les plats compatibles avec un régime alimentaire spécifique (végétarien, vegan, etc.) et détecter les allergènes}
+\item {Intègre un système de traduction automatique supportant plus de 100 langues}
+\item {Développement full-stack end-to-end : conception UX/UI, implémentation et déploiement}
+\item {Technologies: Python, OCR, LLM, PostgreSQL, React, Next.js}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Fondatrice} % Role
+{CashSense - Plateforme SaaS de gestion financière} % Project
+{Toulouse, France} % Location
+{2024} % Date(s)
+{ % Description(s)
+\begin{cvitems}
+\item {Plateforme SaaS de gestion financière permettant de suivre ses finances, se fixer des objectifs d'épargne et prédire les dépassements de budgets}
+\item {Intègre une estimation dynamique des dépenses, une catégorisation automatique des dépenses par IA et un dashboard de suivi en temps réel des transactions}
+\item {Architecture complète avec backend Python et frontend React}
+\item {Technologies: Python, NLP, Machine Learning, PostgreSQL, React, Next.js}
+\end{cvitems}
+}
+\vspace{1.5em}
+
+%------------------------------------------------
+
+\cventry
+{Développeuse} % Role
+{AI Trends - Dashboard de veille technologique IA} % Project
+{Toulouse, France} % Location
 {2023} % Date(s)
 { % Description(s)
 \begin{cvitems}
-\item {Développement d'une solution complète de transcription audio automatisée}
-\item {Implémentation d'une API Python pour le traitement des fichiers audio}
-\item {Création d'une interface utilisateur intuitive avec Next.js}
-\item {Intégration de modèles avancés de Speech-to-Text avec optimisation pour différentes langues}
-\item {Technologies: Python, Node.js, Next.js, API OpenAI, AWS}
-\end{cvitems}
-}
-\vspace{1.5em}
-
-%------------------------------------------------
-
-\cventry
-{Développeur Open Source} % Role
-{Plugin de Modération Twitch} % Project
-{Esbjerg, Danemark} % Location
-{2023} % Date(s)
-{ % Description(s)
-\begin{cvitems}
-\item {Création d'un plugin de modération intégrable pour streamers Twitch}
-\item {Implémentation d'algorithmes de traitement du langage naturel pour la détection de contenu inapproprié}
-\item {Analyse automatique des questions les plus fréquemment posées pour faciliter l'interaction avec l'audience}
-\item {Développement d'un système d'identification des topics et trends en temps réel dans le chat}
-\item {Conception d'un tableau de bord permettant une visualisation des statistiques d'engagement}
-\item {Technologies: Node.js, API Twitch, NLP, WebSockets, React, Data Visualization}
-\end{cvitems}
-}
-\vspace{1.5em}
-
-%------------------------------------------------
-
-
-\cventry
-{Développeur Principal} % Role
-{Developpement Jeu vidéo} % Project
-{Rouen, France} % Location
-{2022} % Date(s)
-{ % Description(s)
-\begin{cvitems}
-\item {Conception et développement d'un prototype de jeu vidéo en 3D avec fonctionnalités multijoueur}
-\item {Implémentation d'une architecture réseau peer-to-peer pour les interactions en temps réel}
-\item {Création de systèmes d'animation avancés et programmation de scripts de gameplay}
-\item {Technologies: Unity, C\#, Networking, Animation}
-\end{cvitems}
-}
-\vspace{1.5em}
-
-
-%------------------------------------------------
-
-\cventry
-{Data Scientist} % Role
-{Classification NLP avec Correction de Biais} % Project
-{Compétition Kaggle} % Location
-{2021} % Date(s)
-{ % Description(s)
-\begin{cvitems}
-\item {Participation en équipe de 3 étudiants à une compétition internationale (3ème place sur le podium)}
-\item {Développement d'algorithmes de classification de métiers basés sur des descriptions textuelles}
-\item {Implémentation de méthodes de correction des biais de genre dans les résultats}
-\item {Technologies: Python, NLP, Classification, Fairness algorithms}
+\item {Dashboard de veille technologique dédié à l'intelligence artificielle}
+\item {Agrégation et analyse automatique des dernières actualités, publications scientifiques et tendances du domaine de l'IA}
+\item {Facilite la veille stratégique et technologique avec visualisations interactives}
+\item {Technologies: Python, NLP, Scraping, Machine Learning, Dash, PostgreSQL, Docker, Data Visualization}
 \end{cvitems}
 }
 
