--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -13,20 +13,14 @@
 %------------------------------------------------
 
 \cvskill
-{Développement Frontend} % Category
-{Next.js, React, Tailwind CSS, Dash} % Skills alignées et uniformisées
+{Data Science \& IA} % Category
+{Machine Learning, Deep Learning, NLP, Computer Vision, LLM} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Développement Backend} % Category
-{Python, Node.js, C\#, FastAPI, API REST} % Regroupement des APIs avec le backend
-
-%------------------------------------------------
-
-\cvskill
-{DevOps \& Cloud} % Category
-{Docker, Vercel, AWS, Azure, Ubuntu Server} % Skills
+{Data Engineering} % Category
+{Spark, Hadoop, GCP, Talend, DBT} % Skills
 
 %------------------------------------------------
 
@@ -37,38 +31,44 @@
 %------------------------------------------------
 
 \cvskill
-{Data Science \& IA} % Category
-{Machine Learning, Deep Learning, NLP, Computer Vision, Séries temporelles} % Skills plus concises
+{Data Visualization} % Category
+{PowerBI, QlikSense, Dash} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Statistiques} % Category
-{Régression, Tests d'hypothèses, ANOVA, Clustering, Réduction dimensionnelle} % Skills
+{Développement Backend} % Category
+{Python, FastAPI, Flask} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Développement 3D} % Category
-{Unity, C\#} % Skills
+{Développement Web} % Category
+{Next.js, React, Tailwind, HTML/CSS} % Skills
 
 %------------------------------------------------
 
 \cvskill
-{Langages de programmation} % Category
-{Python, JavaScript, SQL, HTML/CSS, C\#} % Skills regroupées logiquement
+{Développement Mobile} % Category
+{React Native, Expo, NativeWind} % Skills
+
+%------------------------------------------------
+
+\cvskill
+{Outils \& Méthodes} % Category
+{Git / GitHub, Méthodes Agile, Jira} % Skills
 
 %------------------------------------------------
 
 \cvskill
 {Certifications} % Category
-{Azure Data Engineer Associate (DP-203)} % Ajout des certifications ici
+{IBM Data Science, Dataiku ML Practitioner, Dataiku Core Designer} % Certifications
 
 %------------------------------------------------
 
 \cvskill
 {Langues} % Category
-{Français (natif), Anglais (C1)} % Mise à jour du niveau
+{Français (natif), Anglais (C1)} % Langues
 
 %------------------------------------------------
 
