--- a/resume_cv.tex
+++ b/resume_cv.tex
@@ -21,18 +21,18 @@
 %	PERSONAL INFORMATION
 %----------------------------------------------------------------------------------------
 
-\name{Manoel}{Da Ponte}
-\address{390 route de Saint Simon, Toulouse, France}
-\mobile{(+33) 6 82 69 71 32}
+\name{Nina}{Messaoudi}
+\address{Route de Saint Simon, Toulouse, France}
+\mobile{(+33) 7 66 53 77 59}
 
-\email{daponte.manoel@gmail.com}
-\homepage{manoel-daponte.com}
-\linkedin{manoel-da-ponte-4092ab139}
+\email{messaoudinina55@gmail.com}
+\homepage{nina-messaoudi.com}
+\linkedin{nina-messaoudi}
 
-\position{Full Stack Engineer}
-\quote{Ingénieur full-stack et data scientist avec expérience internationale, je combine expertise technique et vision business pour développer des solutions analytiques innovantes. Capacité éprouvée à concevoir des applications end-to-end répondant précisément aux besoins métiers, avec une approche orientée résultats et une affinité pour les environnements dynamiques.}
+\position{Data Scientist \& AI Engineer}
+\quote{Spécialisée en data science et en intelligence artificielle, avec plus de cinq ans d'expérience dans le domaine, je conçois et développe des solutions end-to-end adaptées à des besoins métiers variés. Animée par une forte appétence pour l'innovation, j'ai également créé et déployé plusieurs applications SaaS intégrant l'IA, alliant rigueur technique, vision produit et recherche d'impact concret.}
 
-\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage}
+\makecvfooter{\today}{Nina Messaoudi~~~·~~~Résumé}{\thepage}
 
 %----------------------------------------------------------------------------------------
 
