--- a/resume_cv_onepage.tex
+++ b/resume_cv_onepage.tex
@@ -21,18 +21,18 @@
 %	PERSONAL INFORMATION
 %----------------------------------------------------------------------------------------
 
-\name{Manoel}{Da Ponte}
-\address{390 route de Saint Simon, Toulouse, France}
-\mobile{(+33) 6 82 69 71 32}
+\name{Nina}{Messaoudi}
+\address{Route de Saint Simon, Toulouse, France}
+\mobile{(+33) 7 66 53 77 59}
 
-\email{daponte.manoel@gmail.com}
-\homepage{manoel-daponte.com}
-\linkedin{manoel-da-ponte-4092ab139}
+\email{messaoudinina55@gmail.com}
+\homepage{nina-messaoudi.com}
+\linkedin{nina-messaoudi}
 
-\position{Full Stack Engineer}
-\quote{Ingénieur full-stack et data scientist combinant expertise technique et vision business. Conception d'applications end-to-end avec une approche orientée résultats pour des solutions analytiques innovantes et centrées utilisateur.}
+\position{Data Scientist \& AI Engineer}
+\quote{Spécialisée en data science et intelligence artificielle avec plus de cinq ans d'expérience. Conception d'applications end-to-end intégrant l'IA, alliant rigueur technique et vision produit pour des solutions innovantes à impact concret.}
 
-\makecvfooter{\today}{Manoel Da Ponte~~~·~~~Résumé}{\thepage}
+\makecvfooter{\today}{Nina Messaoudi~~~·~~~Résumé}{\thepage}
 
 %----------------------------------------------------------------------------------------
 
@@ -45,7 +45,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{flushright}
-{\websitelinkstyle{Pour plus d'informations et exemples de projets, visitez \href{https://manoel-daponte.com}{manoel-daponte.com} \faExternalLink}}
+{\websitelinkstyle{Pour plus d'informations et exemples de projets, visitez \href{https://nina-messaoudi.com}{nina-messaoudi.com} \faExternalLink}}
 \end{flushright}
 
 \vspace{0.1cm}
